--- a/components/Article/article.module.scss
+++ b/components/Article/article.module.scss
@@ -6,6 +6,7 @@
 .article {
     @include mixins.flex(row, center, stretch);
     width: 100dvw;
+    position: relative;
 
     @include breakpoints.tablet {
         flex-direction: column;
