--- a/components/Navigation/navigation.module.scss
+++ b/components/Navigation/navigation.module.scss
@@ -63,7 +63,7 @@
             text-align: center;
 
             @include breakpoints.tablet {
-                width: 100%;
+                width: 100dvw;
             }
 
             &:hover,
